fix(toolchain): harden WSL path translation and resolve code inspections